--- a/TCT/TCT2019A2.ipynb
+++ b/TCT/TCT2019A2.ipynb
@@ -2,21 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "도보와 자전거 : 1110초\n",
+      "\n",
+      "출발시점 13:25\n",
+      "출발지점~셔틀정거장 240초 소요 / E12 에서 탑승.\n",
+      "4.0분 경과\n",
+      "\n",
+      "셔틀대기 시간 60초\n",
+      "셔틀소요 시간 220초\n",
+      "\n",
+      "셔틀정거장~도착지점 240초 소요 / E1 에서 하차\n",
+      "셔틀 이용 총 소요시간 760초\n",
+      "\n",
+      "셔틀포함 최소 : 760초\n"
+     ]
+    }
+   ],
    "source": [
     "bicycleStation = ['E2','E5','E7','E10']\n",
     "start = 'E2'\n",
     "destination = 'E9'\n",
     "departure = '12:00'\n",
     "\n",
+    "bicycleStation = ['E1','E4','E7','E10', 'E12']\n",
+    "start = 'E11'\n",
+    "destination = 'E2'\n",
+    "departure = '13:25'\n",
+    "\n",
     "WALK = 240\n",
     "BICYCLE = 70\n",
     "SHUTTLE = 20\n",
-    "\n",
+    "#####################################################################################################\n",
     "def getTraveltime(biSt, st, dest):\n",
+    "    ##########################\n",
     "    res = 0\n",
+    "    stationList = []\n",
     "    \n",
     "    def getStationNum(stationStr):\n",
     "        num = 0\n",
@@ -25,46 +52,115 @@
     "                num *= 10\n",
     "                num += int(stationStr[s])\n",
     "        return num\n",
-    "    \n",
+    "    ###############################\n",
     "    start_num = getStationNum(st)\n",
     "    dest_num = getStationNum(dest)\n",
-    "    print(start_num, dest_num)\n",
     "    \n",
+    "    for station in biSt:\n",
+    "        stationList.append(getStationNum(station))\n",
+    "        \n",
+    "    minTime = 100000\n",
+    "    # N개 중에 i, j 2개 선정\n",
+    "    # abs(st-i)*WALK + abs(i-j)*BICYCLE + abs(dest-j)*WALK \n",
+    "    for i in stationList:\n",
+    "        for j in stationList:\n",
+    "            tmp = abs(start_num-i)*WALK + abs(i-j)*BICYCLE + abs(dest_num-j)*WALK \n",
+    "            if minTime > tmp:\n",
+    "                minTime = tmp\n",
     "    \n",
-    "    \n",
-    "    return res\n",
+    "    return minTime\n",
     "\n",
+    "#####################################################################################################\n",
     "def getTraveltimeShuttle(biSt, st, dest, dep):\n",
+    "    ##########################\n",
     "    res = 0\n",
+    "    stationList = []\n",
+    "    shuttleList = [1, 12]\n",
     "    \n",
-    "    return res"
+    "    def getStationNum(stationStr):\n",
+    "        num = 0\n",
+    "        for s in range(len(stationStr)):\n",
+    "            if s != 0:\n",
+    "                num *= 10\n",
+    "                num += int(stationStr[s])\n",
+    "        return num\n",
+    "    ###############################\n",
+    "    start_num = getStationNum(st)\n",
+    "    dest_num = getStationNum(dest)\n",
+    "    \n",
+    "    for station in biSt:\n",
+    "        stationList.append(getStationNum(station))\n",
+    "        \n",
+    "    noShuttle = getTraveltime(biSt, st, dest)\n",
+    "    \n",
+    "    # A 출발지에서 자전거타든 뭐하든 1이나 12가기\n",
+    "    # B 셔틀시간 기다리기 : 10분마다 - 분 1의자리(departure + A)\n",
+    "    # C 거기서 반대로 셔틀타기 11*SHUTTLE\n",
+    "    # D 반대에서 자전거타든 뭐하든 도착지로 가기\n",
+    "    \n",
+    "    Atime = 100000\n",
+    "    shtS = 1\n",
+    "    shtE = 12\n",
+    "    \n",
+    "    for bicS in stationList:\n",
+    "        for bicE in stationList:\n",
+    "            for sht in shuttleList:\n",
+    "                tmp = abs(start_num-bicS)*WALK + abs(bicS-bicE)*BICYCLE + abs(sht-bicE)*WALK \n",
+    "                if Atime > tmp:\n",
+    "                    shtS = sht\n",
+    "                    shtE = 13-shtS\n",
+    "                    Atime = tmp\n",
+    "                    \n",
+    "    print('출발시점 ' + departure)\n",
+    "    print('출발지점~셔틀정거장 ' + str(Atime) + \"초 소요\"+ \" / E\"+ str(shtS) + \" 에서 탑승.\")\n",
+    "    print(str(Atime/60) + '분 경과\\n')\n",
+    "    \n",
+    "    Btime = 600 - ( int(departure.split(':')[1])*60 + Atime )%600\n",
+    "    print('셔틀대기 시간 ' + str(Btime)+'초')\n",
+    "    \n",
+    "    Ctime = 11* SHUTTLE\n",
+    "    print('셔틀소요 시간 ' + str(Ctime)+'초\\n')\n",
+    "    \n",
+    "    Dtime = 100000\n",
+    "    for bicS in stationList:\n",
+    "        for bicE in stationList:\n",
+    "            for sht in shuttleList:\n",
+    "                tmp = abs(shtE-bicS)*WALK + abs(bicS-bicE)*BICYCLE + abs(dest_num-bicE)*WALK \n",
+    "                if Dtime > tmp:\n",
+    "                    Dtime = tmp\n",
+    "    print('셔틀정거장~도착지점 ' + str(Dtime) + \"초 소요\"+ \" / E\"+ str(shtE) + \" 에서 하차\")\n",
+    "    \n",
+    "    totalTime = Atime + Btime + Ctime + Dtime\n",
+    "    \n",
+    "    print('셔틀 이용 총 소요시간 ' + str(totalTime) + '초\\n')\n",
+    "    \n",
+    "    minTime = min(totalTime, noShuttle)\n",
+    "    \n",
+    "    return minTime\n",
+    "\n",
+    "#####################################################################################################\n",
+    "print(\"도보와 자전거 : \" +str(getTraveltime(bicycleStation, start, destination)) + \"초\\n\")\n",
+    "print(\"셔틀포함 최소 : \" +str(getTraveltimeShuttle(bicycleStation, start, destination, departure)) + \"초\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 9\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getTraveltime(bicycleStation, start, destination)"
+    "int(departure.split(':')[1])"
    ]
   }
  ],
