add more 2019A2 problems

--- a/TCT/TCT2019A2.ipynb
+++ b/TCT/TCT2019A2.ipynb
@@ -2,30 +2,160 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 원카드\n",
+    "cardList = ['S4','H4','D4','D9','H9','H4','H2','S2']\n",
+    "cardList = ['C5','H5','D2','D6','D3','S3']\n",
+    "\n",
+    "for idx in range(len(cardList)-1):\n",
+    "    chk = True\n",
+    "    \n",
+    "    if (cardList[idx][0] != cardList[idx+1][0]) & (cardList[idx][1] != cardList[idx+1][1]):\n",
+    "        chk=False\n",
+    "        \n",
+    "    if chk == False:\n",
+    "        print(\"false\")\n",
+    "        break\n",
+    "        \n",
+    "if chk == True:\n",
+    "    print(\"true\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "도보와 자전거 : 1110초\n",
-      "\n",
-      "출발시점 13:25\n",
-      "출발지점~셔틀정거장 240초 소요 / E12 에서 탑승.\n",
-      "4.0분 경과\n",
-      "\n",
-      "셔틀대기 시간 60초\n",
-      "셔틀소요 시간 220초\n",
-      "\n",
-      "셔틀정거장~도착지점 240초 소요 / E1 에서 하차\n",
-      "셔틀 이용 총 소요시간 760초\n",
-      "\n",
-      "셔틀포함 최소 : 760초\n"
+      "[[10, 20, 30], [40, 50, 60], [70, 80, 90]]\n",
+      "[[10, 20, 30, 60], [40, 50, 60, 150], [70, 80, 90, 240]]\n",
+      "[[30, 60, 10, 20], [60, 150, 40, 50], [90, 240, 70, 80], [180, 450, 120, 150]]\n"
      ]
     }
    ],
    "source": [
+    "# 2 가로세로 합\n",
+    "arrList = [[10,20,30],[40,50,60],[70,80,90]]\n",
+    "print(arrList) \n",
+    "\n",
+    "def row_add(arrL):\n",
+    "    for arr in arrL:\n",
+    "        sumarr = 0\n",
+    "        for i in arr:\n",
+    "            sumarr += i\n",
+    "        arr.append(sumarr)\n",
+    "    return arrL\n",
+    "\n",
+    "secList = row_add(arrList)\n",
+    "print(secList)\n",
+    "\n",
+    "arrLen = len(secList[idx])\n",
+    "ansList = []\n",
+    "sumRow = [0]*arrLen\n",
+    "for idx in range(len(secList)):\n",
+    "    chArr = []\n",
+    "    # 0 1 '2' 3 4    // 5, 2\n",
+    "    # 0 1 2 '' 3 4 5 // 6, 3\n",
+    "    for i in range(int(arrLen/2), arrLen):\n",
+    "        chArr.append(secList[idx][i])\n",
+    "        \n",
+    "    for i in range(0, int(arrLen/2)):\n",
+    "        chArr.append(secList[idx][i])\n",
+    "        \n",
+    "    for i in range(0, arrLen):\n",
+    "        sumRow[i] += chArr[i]\n",
+    "    \n",
+    "    ansList.append(chArr)\n",
+    "    \n",
+    "ansList.append(sumRow)\n",
+    "print(ansList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3연속 일렬사용\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. 키패드 암호 검증하기\n",
+    "# pw = '1234567890*'\n",
+    "# pw = '12345'\n",
+    "pw = '135135135'\n",
+    "\n",
+    "def check_AB(password):\n",
+    "    if password.isnumeric() != True:\n",
+    "        print(\"숫자아님\")\n",
+    "        return False    \n",
+    "        \n",
+    "    if (len(password) < 6) | (len(password) > 15):\n",
+    "        print(\"글자수딸림\")\n",
+    "        return False\n",
+    "    \n",
+    "    for i in range(len(password)-2):\n",
+    "        if int(password[i])-int(password[i+1]) == int(password[i+1])-int(password[i+2]):\n",
+    "            print(\"3연속 일렬사용\")\n",
+    "            return False\n",
+    "        if (password[i]+password[i+1]+password[i+2] == \"025\") | (password[i]+password[i+1]+password[i+2] == \"520\"):\n",
+    "            print(\"3연속 일렬사용 025 520\")\n",
+    "            return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "print(check_AB(pw))\n",
+    "\n",
+    "def check_CD(password):\n",
+    "    for i in range(len(password)-2):\n",
+    "        if (int(password[i]) == int(password[i+1])) & (int(password[i+2]) == int(password[i+1])):\n",
+    "            print(\"3연속 동일숫자\")\n",
+    "            return False\n",
+    "        \n",
+    "    for length in range(2, len(password)-1):\n",
+    "        for s_idx in range(0, len(password)-length)\n",
+    "    \n",
+    "    \n",
+    "    return True\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5 셔틀\n",
     "bicycleStation = ['E2','E5','E7','E10']\n",
     "start = 'E2'\n",
     "destination = 'E9'\n",
@@ -141,26 +271,6 @@
     "#####################################################################################################\n",
     "print(\"도보와 자전거 : \" +str(getTraveltime(bicycleStation, start, destination)) + \"초\\n\")\n",
     "print(\"셔틀포함 최소 : \" +str(getTraveltimeShuttle(bicycleStation, start, destination, departure)) + \"초\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(departure.split(':')[1])"
    ]
   }
  ],
