--- a/TCT/TCT2019A2.ipynb
+++ b/TCT/TCT2019A2.ipynb
@@ -79,14 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "####### 가, 나 유효성 검증 결과\n",
+      "135135135\n",
       "3연속 일렬사용\n",
+      "False\n",
+      "####### 다, 라 유효성 검증 결과\n",
+      "137988137988\n",
+      "2글자 이상의 동일패턴 등장 : 137988\n",
       "False\n"
      ]
     }
@@ -116,23 +122,32 @@
     "    \n",
     "    return True\n",
     "\n",
+    "print(\"####### 가, 나 유효성 검증 결과\")\n",
+    "print(pw)\n",
     "print(check_AB(pw))\n",
+    "\n",
+    "\n",
+    "pw = '137988137988'\n",
+    "#pw = '6482917350'\n",
+    "#pw = '262610912'\n",
     "\n",
     "def check_CD(password):\n",
     "    for i in range(len(password)-2):\n",
     "        if (int(password[i]) == int(password[i+1])) & (int(password[i+2]) == int(password[i+1])):\n",
-    "            print(\"3연속 동일숫자\")\n",
+    "            print(\"3연속 동일숫자 : \"+ password[i]+password[i]+password[i])\n",
     "            return False\n",
     "        \n",
     "    for length in range(2, len(password)-1):\n",
-    "        for s_idx in range(0, len(password)-length)\n",
-    "    \n",
-    "    \n",
+    "        for pattern_idx in range(0, len(password)-length):            \n",
+    "            if password[pattern_idx:pattern_idx+length] == password[pattern_idx+length:pattern_idx+length+length]:\n",
+    "                print(\"2글자 이상의 동일패턴 등장 : \" + password[pattern_idx:pattern_idx+length])\n",
+    "                return False\n",
+    "                \n",
     "    return True\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n"
+    "\n",
+    "print(\"####### 다, 라 유효성 검증 결과\")\n",
+    "print(pw)\n",
+    "print(check_CD(pw))"
    ]
   },
   {
@@ -140,22 +155,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# 5 셔틀\n",
+    "# 4 셔틀\n",
     "bicycleStation = ['E2','E5','E7','E10']\n",
     "start = 'E2'\n",
     "destination = 'E9'\n",
