--- a/TCT/마스크 확인.ipynb
+++ b/TCT/마스크 확인.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,8 @@
     "import urllib.request\n",
     "import urllib.parse\n",
     "import time\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import webbrowser"
    ]
   },
   {
@@ -92,6 +93,7 @@
     "            print(item_selled)\n",
     "            print(\"열렸다!\")\n",
     "            print(datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\"))\n",
+    "            webbrowser.open('http://www.welkeepsmall.com/shop/shopbrand.html?xcode=023&mcode=&type=X&scode=&sort=sellcnt', new=1)\n",
     "            conti = False\n",
     "            break\n",
     "    \n",
