finish mask crawler

--- a/TCT/마스크 확인.ipynb
+++ b/TCT/마스크 확인.ipynb
@@ -2,38 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\lgcns\\anaconda3\\lib\\site-packages (4.8.0)\n",
-      "Requirement already satisfied: soupsieve>=1.2 in c:\\users\\lgcns\\anaconda3\\lib\\site-packages (from beautifulsoup4) (1.9.3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install --trusted-host pypi.org --trusted-host files.pythonhosted.org beautifulsoup4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\lgcns\\anaconda3\\lib\\site-packages (4.8.0)\n",
-      "Requirement already satisfied: soupsieve>=1.2 in c:\\users\\lgcns\\anaconda3\\lib\\site-packages (from beautifulsoup4) (1.9.3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install --trusted-host pypi.org --trusted-host files.pythonhosted.org beautifulsoup4\n",
     "from bs4 import BeautifulSoup\n",
     "from IPython.display import clear_output\n",
     "from datetime import datetime\n",
@@ -46,63 +27,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flag = '<li class=\"soldout\">SOLD OUT</li>'\n",
+    "flag2 = \"<title>403 forbidden</title>\"\n",
+    "\n",
+    "def start_Crawling():\n",
+    "    count = 0\n",
+    "    \n",
+    "    while True:\n",
+    "        try:\n",
+    "            clear_output(wait=True)\n",
+    "            count += 1\n",
+    "            print(str(count) + \"번째 접속 시도... --> \" + datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\"))\n",
+    "            \n",
+    "            with urllib.request.urlopen(\"http://www.welkeepsmall.com/shop/shopbrand.html?xcode=023&mcode=&type=X&scode=&sort=sellcnt\") as response:\n",
+    "                html = response.read()\n",
+    "                soup = BeautifulSoup(html, 'html.parser')\n",
+    "                all_items = soup.find_all(\"ul\",\"info\")\n",
+    "            \n",
+    "            for item in all_items:\n",
+    "                item_name = item.find_all(\"li\")[0]\n",
+    "                item_selled = item.find_all(\"li\")[2]\n",
+    "    \n",
+    "                if str(item_selled) != flag:\n",
+    "                    print(item_name)\n",
+    "                    print(item_selled)\n",
+    "                    print(\"물건 들어옴  \"+ datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\"))\n",
+    "                    \n",
+    "                    # 로그인 및 장바구니 접근가능 확인\n",
+    "                    print(\"서버 정상 작동 여부 확인.....\")\n",
+    "                    with urllib.request.urlopen(\"http://www.welkeepsmall.com/shop/member.html?type=login\") as response:\n",
+    "                        html2 = response.read()\n",
+    "                        soup2 = BeautifulSoup(html2, 'html.parser')\n",
+    "                        login_title = soup2.find(\"title\")\n",
+    "                    with urllib.request.urlopen(\"http://www.welkeepsmall.com/shop/basket.html\") as response:\n",
+    "                        html3 = response.read()\n",
+    "                        soup3 = BeautifulSoup(html3, 'html.parser')\n",
+    "                        bucket_title = soup3.find(\"title\")\n",
+    "                        \n",
+    "                    if (str(login_title) != flag2) | (str(bucket_title) != flag2):\n",
+    "                        print(\"정상 접속가능\")\n",
+    "                        webbrowser.open('http://www.welkeepsmall.com/shop/shopbrand.html?xcode=023&mcode=&type=X&scode=&sort=sellcnt', new=1)\n",
+    "                        return\n",
+    "                    else:\n",
+    "                        print(\"정상 접속 불가능\")\n",
+    "                        break\n",
+    "                        \n",
+    "            print(\"현재 재고 없음\")\n",
+    "            print(datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\"))\n",
+    "            time.sleep(1 + np.random.randn(1)[0]%1)\n",
+    "            \n",
+    "        except:\n",
+    "            print(\"서버 조짐!\")\n",
+    "            print(datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\"))\n",
+    "            time.sleep(1 + np.random.randn(1)[0]%1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<li class=\"soldout\">SOLD OUT</li>\n",
-      "148번째 시도 : 모두 매진\n",
-      "02/24/2020, 18:01:44\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-83-34ed9bc28be5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m     \u001b[0mclear_output\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwait\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[0mcount\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "18번째 접속 시도... --> 02/25/2020, 15:43:42\n"
      ]
     }
    ],
    "source": [
-    "flag = '<li class=\"soldout\">SOLD OUT</li>'\n",
-    "\n",
-    "conti = True\n",
-    "count = 0\n",
-    "\n",
-    "while conti:\n",
-    "    # web_url에 원하는 웹의 URL을 넣어주시면 됩니다.\n",
-    "    with urllib.request.urlopen(\"http://www.welkeepsmall.com/shop/shopbrand.html?xcode=023&mcode=&type=X&scode=&sort=sellcnt\") as response:\n",
-    "        html = response.read()\n",
-    "        soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
-    "        all_items = soup.find_all(\"ul\",\"info\")\n",
-    "\n",
-    "    for item in all_items:\n",
-    "        item_name = item.find_all(\"li\")[0]\n",
-    "        item_selled = item.find_all(\"li\")[2]\n",
-    "    \n",
-    "        if str(item_selled) != flag:\n",
-    "            print(item_name)\n",
-    "            print(item_selled)\n",
-    "            print(\"열렸다!\")\n",
-    "            print(datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\"))\n",
-    "            webbrowser.open('http://www.welkeepsmall.com/shop/shopbrand.html?xcode=023&mcode=&type=X&scode=&sort=sellcnt', new=1)\n",
-    "            conti = False\n",
-    "            break\n",
-    "    \n",
-    "    time.sleep(1 + np.random.randn(1)[0]%1)\n",
-    "    clear_output(wait=True)\n",
-    "    count+=1\n",
-    "    print(item_selled)\n",
-    "    print(str(count) + \"번째 시도 : 모두 매진\")\n",
-    "    print(datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\"))\n"
+    "start_Crawling()"
    ]
   }
  ],
